--- a/style.css
+++ b/style.css
@@ -3,3 +3,156 @@
     margin: 0;
     padding: 0;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+html, body {
+    font-family: "Poppins", sans-serif;
+    color: #111;
+}
+
+
+
+.logo {
+    font-family: "Kaushan Script", cursive;
+    position: absolute;
+    top: 30px;
+    left: 100px;
+    font-size: 2rem;
+    font-weight: 700;
+    z-index: 20;
+}
+
+/*TOGGLE*/
+.toggle {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 60px;
+    height: 60px;
+    background: #E6A817 url(../Images/menu.png);
+    z-index: 20;
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+}
+
+.toggle.active {
+    background: #E6A817 url(./Images/close.png);
+    background-size: 25px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.navigation {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navigation.active {
+    position: fixed;
+    top: 0;
+    left: 0
+}
+
+.navigation ul {
+    position: relative;
+}
+
+.navigation ul li {
+    position: relative;
+    list-style: none;
+    text-align: center;
+}
+
+.navigation ul li a {
+    font-size: 2.2rem;
+    color: #111;
+    text-decoration: none;
+    font-weight: 300;
+}
+
+.navigation ul li a:hover {
+    color: #00A693;
+}
+
+.navigation .social-bar {
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navigation .social-bar a {
+    display: inline-block;
+    transform: scale (0.5);
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    margin-top: 100px;
+    background-color: #00A693;
+    padding: 20px 100px;
+}
+
+/*MAIN*/
+main {
+    display:flex;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.products {
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+    text-align: center;
+}
+
+.product-card {
+    border-radius: 10px;
+    background-color: #B2FFFF;
+}
+
+.products .product-card:hover {
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+.image img {
+    width: 80%;
+    margin-top: 20px;
+}
+
+@media screen and (max-width: 1080px) {
+    .logo {
+        top: 10px;
+        left: 40px;
+        font-size: 1.5rem;
+    }
+    .navigation ul li a {
+        font-size: 2rem;
+    }
+    .products {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .products {
+        grid-template-columns: 1fr;
+    }
+}
