--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 * {
     box-sizing: 0;
     margin: 0;
     padding: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html, body {
     font-family: "Poppins", sans-serif;
@@ -100,6 +102,8 @@ html, body {
     transform: scale (0.5);
 }
 
+
+/*Search Bar*/
 .search-bar {
     display: flex;
     align-items: center;
@@ -107,6 +111,24 @@ html, body {
     background-color: #00A693;
     padding: 20px 100px;
 }
+
+.filters-container {
+    display: flex;
+
+}
+
+.filters-container h3 {
+    margin-right: 20px;
+    color: white;
+}
+
+.filters-container label {
+    padding: 0 20px;
+}
+#max-price-search {
+    margin: 0 auto;
+}
+
 
 /*MAIN*/
 main {
